@@ -1,0 +1,26 @@
+/* XPM */
+static char * slset2_xpm[] = {
+"16 16 7 1",
+" 	c None",
+".	c #7F7F7F",
+"+	c #000080",
+"@	c #868686",
+"#	c #000000",
+"$	c #0000FF",
+"%	c #C0C0C0",
+"                ",
+"                ",
+"   ......       ",
+"  .      .      ",
+" .        .     ",
+" ..      ..     ",
+" . ...... .     ",
+" .        .     ",
+" .        .     ",
+" .        ++++++",
+" .. @@@@@@#$$$$$",
+"  @@%     #$$$$$",
+" ###@@   %#+$$$$",
+"#@%     %##+++++",
+" ##@%  @# ######",
+"   #####        "};
