@@ -1,0 +1,28 @@
+/* XPM */
+static char * slsubscription2_xpm[] = {
+"16 16 9 1",
+" 	c None",
+".	c #FF0000",
+"+	c #C00000",
+"@	c #7F7F7F",
+"#	c #000080",
+"$	c #868686",
+"%	c #000000",
+"&	c #0000FF",
+"*	c #C0C0C0",
+"                ",
+"          .+    ",
+"   @@@@@@ .+    ",
+"  @      .+     ",
+" @       .+     ",
+" @@     .+@     ",
+" @ @.+@@.+@     ",
+" @   .+.+ @     ",
+" @   ...+ @     ",
+" @    .+  ######",
+" @@ $$$+$$%&&&&&",
+"  $$*     %&&&&&",
+" %%%$$   *%#&&&&",
+"%$*     *%%#####",
+" %%$*  $% %%%%%%",
+"   %%%%%        "};
